--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haamupeli torstai</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    <h1>haamupeli 2</h1>
+    <div id="intro-screen">
+        <!--  <div class="wall-container"></div> -->
+     <h1>Tervetuloa pelaamaan BlackBelt Kevät -25 peliä!!</h1>
+     <p>Ammu hirviöt päästäksesi seuraavalle tasolle.</p>
+     <h2>Hirviöt:</h2>
+     <div>
+         <img src="images/hornmonster.png">
+         <div>
+             <h3>Horn Monster</h3>
+             <p>An orange demon with menacing horns. This relentless fiend constantly hunts the player, moving directly towards them. When obstructed, Horny resorts to random movement. Its speed is notably brisk, adding a sense of urgency to the chase.</p>
+         </div>
+     </div>
+
+</div>
+
+
+
+
+
 </body>
+
 </html>
