--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,14 @@
              <p>An orange demon with menacing horns. This relentless fiend constantly hunts the player, moving directly towards them. When obstructed, Horny resorts to random movement. Its speed is notably brisk, adding a sense of urgency to the chase.</p>
          </div>
      </div>
+     <button onclick="startGame()">Aloita peli</button>
+    </div>
 
-</div>
+    <div id="game-screen">
+ 
+        <h1>Pelialue</h1>
+
+    </div>
 
 
 
