--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
 
     <div id="game-screen">
  
-        <h1>Pelialue</h1>
+        <div id="game-board">
+ 
+        
+
+        </div>
 
     </div>
 
