--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="game-screen">
- 
+        <div id="pisteet">Pisteet: 0</div>
         <div id="game-board">
  
         
